# AIE7

./: README.md
00_Onramp/: README.md
00_Onramp/onramp01_Cursor_and_Git/: README.md  main.py
00_Onramp/onramp02_Prompting/: README.md
00_OpenAI API Key Setup/: README.md
00_Setting Up Git/: README.md
On_ramp/: main.py
On_ramp/PythonicRAG/: BuildingAChainlitApp.md  Dockerfile  README.md  app.py  chainlit.md  pyproject.toml
